[gd_scene load_steps=2 format=3 uid="uid://cf2h7q0fkhe60"]

[ext_resource type="Script" uid="uid://doot4eg2j3qmf" path="res://Main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="LevelLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level: 1"

[node name="GoldLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Gold: 0"

[node name="GemsLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Gems: 0"

[node name="PullCurrencyLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Pulls: 0"

[node name="MoneyLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Money: 0"

[node name="BossTimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 60.0
offset_right = 75.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Boss Timer: 15"
horizontal_alignment = 1

[node name="BottomPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ShopButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Shop"

[node name="GachaButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Gacha"

[node name="TeamButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Team"

[node name="CharactersButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Collection"

[node name="PrestigeButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Prestige"

[node name="EnemyContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamContainer" type="HBoxContainer" parent="TeamDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CharSlot1" type="Control" parent="TeamDisplay/TeamContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2

[node name="CharSlot2" type="Control" parent="TeamDisplay/TeamContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2

[node name="PlayerSlot" type="Control" parent="TeamDisplay/TeamContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2

[node name="CharSlot3" type="Control" parent="TeamDisplay/TeamContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2

[node name="CharSlot4" type="Control" parent="TeamDisplay/TeamContainer"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 2
